# WriteUp

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
app/: ProcessScribe.sln  README.md  WriteUp.sln  make-installer.cmd  publish-singlefile.cmd
app/ProcessScribe/: App.xaml  App.xaml.cs  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  ProcessScribe.csproj  app.manifest
app/ProcessScribe/Models/: AppSettings.cs  SessionMeta.cs  Step.cs
app/ProcessScribe/Services/: DocumentExporter.cs  FlowReport.cs  InputHook.cs  NativeMethods.cs  Recorder.cs  ReportWriter.cs  ScreenCapturer.cs  SettingsStore.cs  WindowTracker.cs
app/WriteUp/: AnnotationEditorWindow.xaml  AnnotationEditorWindow.xaml.cs  App.xaml  App.xaml.cs  CompactBar.xaml  CompactBar.xaml.cs  MainViewModel.cs  MainWindow.Export.cs  MainWindow.Tour.cs  MainWindow.xaml  MainWindow.xaml.cs  PathToImageConverter.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  WriteUp.csproj  app.manifest
app/WriteUp/Models/: Annotation.cs  AppSettings.cs  FeedbackReport.cs  SessionMeta.cs  Step.cs
app/WriteUp/Services/: AnnotationStore.cs  Branding.cs  DocumentExporter.cs  FeedbackService.cs  FlowReport.cs  ImageLoad.cs  InputHook.cs  NativeMethods.cs  Recorder.cs  ReportWriter.cs  ScreenCapturer.cs  (+5 more)
app/installer/: WriteUp.iss
docs/: ARCHITECTURE.md
examples/extrude-a-boss/: events.json  report.docx  report.html  report.md
scripts/: push_to_github.sh
src/process_scribe/: __init__.py  cli.py  config.py  models.py  recorder.py  screenshot.py  window.py  writer.py
tests/: test_writer.py
(+1 files in other folders)
